60 - Diverse stuff and git errors

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ saves/*
 .settings/org.eclipse.ltk.core.refactoring.prefs
 res/images/Thumbs.db
 sh.exe.stackdump
+src/main/Program.java
+src/main/Program.java
